--- a/pages/legal--disclaimers.html
+++ b/pages/legal--disclaimers.html
@@ -177,7 +177,7 @@
         <div id="disclaimers-footer" class="fella-footnotes">
             <p>Some identifying information is not mentioned on this page for privacy reasons. If you require access to this
                 information, please contact us directly. Floofi reserves the right to amend this page and its content without
-                prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
+                a given reason after a 14 days notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
     </section>
 </section>
