--- a/pages/legal--privacy.html
+++ b/pages/legal--privacy.html
@@ -245,8 +245,8 @@
         </p>
 
         <div id="disclaimers-footer" class="fella-footnotes">
-            <p>Floofi reserves the right to amend this page and its content without
-                prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
+            <p>Floofi reserves the right to amend this page and its content without a given reason after a 14 days
+                notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
     </section>
 </section>
