--- a/me/index.html
+++ b/me/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Starscouts</title>
+    <title>Kammy</title>
     <script>
         if (location.hostname !== "localhost" && location.hostname !== "me.floo.fi") {
             location.href = "https://me.floo.fi";
@@ -10,7 +10,7 @@
     </script>
     <link rel="stylesheet" href="/assets/css/me.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="Starscouts">
+    <meta property="og:title" content="Kammy">
     <meta property="og:site_name" content="Floofi">
     <meta property="og:description" content="I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.">
     <meta property="og:image" content="https://www.gravatar.com/avatar/890db7c4dc714ef83d95d4291bd40737.jpg?s=630">
