--- a/pages/credits.html
+++ b/pages/credits.html
@@ -7,10 +7,10 @@
 
     <div id="credits-grid">
         <div class="credits-grid-title">Lead<br>Programming<br>Design</div>
-        <div>Starscouts</div>
+        <div>Kammy</div>
 
         <div class="credits-grid-title">Testing (Development)</div>
-        <div>Starscouts<br>ryze312<br>Moonglow<br>Hailstorm</div>
+        <div>Kammy<br>ryze312<br>Moonglow<br>Hailstorm</div>
 
         <div class="credits-grid-title">Testing (Early Access)</div>
         <div>Moonglow<br>ryze312<br>Mis1ify</div>
