--- a/pages/legal--disclaimers.html
+++ b/pages/legal--disclaimers.html
@@ -101,7 +101,7 @@
     <section class="fella-limited-width">
         <h3 class="disclaimers-title" id="content">Content disclaimers</h3>
         <p>Unless in presence of user-created content, the content hosted on Floofi Systems's platforms is under the
-            responsibility of Mia (<a href="/contact/start?i=10">contact</a>). Even though we make as much effort
+            responsibility of Kammy (<a href="/contact/start?i=10">contact</a>). Even though we make as much effort
             as possible into providing users with accurate information, Floofi Systems cannot guarantee the
             preciseness of the information provided by our platforms. Therefore, the information on our platforms may be
             inexact or outdated.</p>
