--- a/app.html
+++ b/app.html
@@ -183,7 +183,7 @@
                         <a href="https://blog.floo.fi" class="fella-nav-navigation-item-link">Blog</a>
                     </li>
                     <li class="fella-nav-navigation-item">
-                        <a href="https://me.floo.fi" class="fella-nav-navigation-item-link">Starscouts</a>
+                        <a href="https://me.floo.fi" class="fella-nav-navigation-item-link">Kammy</a>
                     </li>
                 </ul>
             </div>
