Hotfix for status.floo.fi being down

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,7 +71,7 @@
 </section>
 
 <script>
-    switch (window.statusData.code) {
+    switch (window.statusData?.code) {
         case 0:
         case 3:
             document.getElementById("contact-status-text").innerText = "All systems normal.";
@@ -81,8 +81,8 @@
             break;
 
         case 1:
-            if (window.statusData['outages'].length > 1) {
-                document.getElementById("contact-status-text").innerText = window.statusData['outages'].length + " alerts.";
+            if (window.statusData?.outages?.length > 1) {
+                document.getElementById("contact-status-text").innerText = window.statusData?.outages?.length + " alerts.";
             } else {
                 document.getElementById("contact-status-text").innerText = "Temporary alert.";
             }
@@ -92,8 +92,8 @@
             break;
 
         case 2:
-            if (window.statusData['outages'].length > 1) {
-                document.getElementById("contact-status-text").innerText = window.statusData['outages'].length + " outages.";
+            if (window.statusData?.outages?.length > 1) {
+                document.getElementById("contact-status-text").innerText = window.statusData?.outages?.length + " outages.";
             } else {
                 document.getElementById("contact-status-text").innerText = "Temporary outage.";
             }
