Add Luxicon Private Beta

--- a/pages/contact--start.html
+++ b/pages/contact--start.html
@@ -47,6 +47,7 @@
                 <option value="9">Discuss the Floofi for Nonprofits programme</option>
                 <option value="10">Copyright/DMCA takedown or legal request</option>
                 <option value="11">Something else</option>
+                <option value="12">Request support for the Luxicon Private Beta</option>
             </select>
         </label>
 
